apse/gencode/gena/GenaParser.py
# Generated from Gena.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class GenaParser ( Parser ):

    grammarFileName = "Gena.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "':'", "'.'", "'List'", "'One'", 
                     "'{'", "'}'", "','", "'initializes'", "'('", "')'", 
                     "<INVALID>", "<INVALID>", "'->'", "<INVALID>", "'noid'", 
                     "'let'", "'copath'", "'class'", "'singleton'", "'extends'", 
                     "'nary'", "'event'", "'param'", "'callinto'", "'caller'", 
                     "'belongsto'", "'piggyafter'", "'piggyinto'", "'piggybefore'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WS", "Comment", "EvtPathConnector", "OPCHAR", "Noid", 
                      "Let", "Copath", "Class", "Singleton", "Extends", 
                      "Nary", "Event", "Param", "Callinto", "Caller", "Belongsto", 
                      "PiggyAfter", "PiggyInto", "PiggyBefore", "DataType", 
                      "Iden" ]

    RULE_doc = 0
    RULE_docStmt = 1
    RULE_docStmtNse = 2
    RULE_stmtNse = 3
    RULE_nseMain = 4
    RULE_nseIden = 5
    RULE_nseType = 6
    RULE_nseNary = 7
    RULE_nseParam = 8
    RULE_nseCurly = 9
    RULE_stmtCopath = 10
    RULE_stmtExtends = 11
    RULE_stmtInitializes = 12
    RULE_stmtCaller = 13
    RULE_stmtCallinto = 14
    RULE_eventPath = 15
    RULE_eventSpec = 16
    RULE_eventName = 17
    RULE_eventTargetArgs = 18
    RULE_eventTarget = 19
    RULE_eventCurly = 20

    ruleNames =  [ "doc", "docStmt", "docStmtNse", "stmtNse", "nseMain", 
                   "nseIden", "nseType", "nseNary", "nseParam", "nseCurly", 
                   "stmtCopath", "stmtExtends", "stmtInitializes", "stmtCaller", 
                   "stmtCallinto", "eventPath", "eventSpec", "eventName", 
                   "eventTargetArgs", "eventTarget", "eventCurly" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    WS=12
    Comment=13
    EvtPathConnector=14
    OPCHAR=15
    Noid=16
    Let=17
    Copath=18
    Class=19
    Singleton=20
    Extends=21
    Nary=22
    Event=23
    Param=24
    Callinto=25
    Caller=26
    Belongsto=27
    PiggyAfter=28
    PiggyInto=29
    PiggyBefore=30
    DataType=31
    Iden=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def docStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GenaParser.DocStmtContext)
            else:
                return self.getTypedRuleContext(GenaParser.DocStmtContext,i)


        def getRuleIndex(self):
            return GenaParser.RULE_doc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoc" ):
                listener.enterDoc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoc" ):
                listener.exitDoc(self)




    def doc(self):

        localctx = GenaParser.DocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_doc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 42
                self.docStmt()
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GenaParser.Noid) | (1 << GenaParser.Let) | (1 << GenaParser.DataType) | (1 << GenaParser.Iden))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DocStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def docStmtNse(self):
            return self.getTypedRuleContext(GenaParser.DocStmtNseContext,0)


        def getRuleIndex(self):
            return GenaParser.RULE_docStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocStmt" ):
                listener.enterDocStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocStmt" ):
                listener.exitDocStmt(self)




    def docStmt(self):

        localctx = GenaParser.DocStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_docStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.docStmtNse()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DocStmtNseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmtNse(self):
            return self.getTypedRuleContext(GenaParser.StmtNseContext,0)


        def getRuleIndex(self):
            return GenaParser.RULE_docStmtNse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocStmtNse" ):
                listener.enterDocStmtNse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocStmtNse" ):
                listener.exitDocStmtNse(self)




    def docStmtNse(self):

        localctx = GenaParser.DocStmtNseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_docStmtNse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.stmtNse()
            self.state = 50
            self.match(GenaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtNseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nseMain(self):
            return self.getTypedRuleContext(GenaParser.NseMainContext,0)


        def nseNary(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GenaParser.NseNaryContext)
            else:
                return self.getTypedRuleContext(GenaParser.NseNaryContext,i)


        def nseCurly(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GenaParser.NseCurlyContext)
            else:
                return self.getTypedRuleContext(GenaParser.NseCurlyContext,i)


        def nseParam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GenaParser.NseParamContext)
            else:
                return self.getTypedRuleContext(GenaParser.NseParamContext,i)


        def getRuleIndex(self):
            return GenaParser.RULE_stmtNse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtNse" ):
                listener.enterStmtNse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtNse" ):
                listener.exitStmtNse(self)




    def stmtNse(self):

        localctx = GenaParser.StmtNseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmtNse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.nseMain()
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GenaParser.T__5) | (1 << GenaParser.Nary) | (1 << GenaParser.Param))) != 0):
                self.state = 56
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [GenaParser.Nary]:
                    self.state = 53
                    self.nseNary()
                    pass
                elif token in [GenaParser.T__5]:
                    self.state = 54
                    self.nseCurly()
                    pass
                elif token in [GenaParser.Param]:
                    self.state = 55
                    self.nseParam()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NseMainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Noid(self):
            return self.getToken(GenaParser.Noid, 0)

        def Let(self):
            return self.getToken(GenaParser.Let, 0)

        def nseIden(self):
            return self.getTypedRuleContext(GenaParser.NseIdenContext,0)


        def nseType(self):
            return self.getTypedRuleContext(GenaParser.NseTypeContext,0)


        def getRuleIndex(self):
            return GenaParser.RULE_nseMain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNseMain" ):
                listener.enterNseMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNseMain" ):
                listener.exitNseMain(self)




    def nseMain(self):

        localctx = GenaParser.NseMainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_nseMain)
        self._la = 0 # Token type
        try:
            self.state = 70
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GenaParser.Noid]:
                self.enterOuterAlt(localctx, 1)
                self.state = 61
                self.match(GenaParser.Noid)
                pass
            elif token in [GenaParser.Let, GenaParser.DataType, GenaParser.Iden]:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [GenaParser.Let]:
                    self.state = 62
                    self.match(GenaParser.Let)
                    pass
                elif token in [GenaParser.DataType, GenaParser.Iden]:
                    self.state = 63
                    self.nseIden()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==GenaParser.T__1:
                    self.state = 66
                    self.match(GenaParser.T__1)
                    self.state = 67
                    self.nseType()


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NseIdenContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DataType(self):
            return self.getToken(GenaParser.DataType, 0)

        def Iden(self, i:int=None):
            if i is None:
                return self.getTokens(GenaParser.Iden)
            else:
                return self.getToken(GenaParser.Iden, i)

        def getRuleIndex(self):
            return GenaParser.RULE_nseIden

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNseIden" ):
                listener.enterNseIden(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNseIden" ):
                listener.exitNseIden(self)




    def nseIden(self):

        localctx = GenaParser.NseIdenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_nseIden)
        self._la = 0 # Token type
        try:
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GenaParser.DataType]:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.match(GenaParser.DataType)
                pass
            elif token in [GenaParser.Iden]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.match(GenaParser.Iden)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==GenaParser.T__2:
                    self.state = 74
                    self.match(GenaParser.T__2)
                    self.state = 75
                    self.match(GenaParser.Iden)
                    self.state = 80
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NseTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Noid(self):
            return self.getToken(GenaParser.Noid, 0)

        def Class(self):
            return self.getToken(GenaParser.Class, 0)

        def Singleton(self):
            return self.getToken(GenaParser.Singleton, 0)

        def Event(self):
            return self.getToken(GenaParser.Event, 0)

        def nseIden(self):
            return self.getTypedRuleContext(GenaParser.NseIdenContext,0)


        def getRuleIndex(self):
            return GenaParser.RULE_nseType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNseType" ):
                listener.enterNseType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNseType" ):
                listener.exitNseType(self)




    def nseType(self):

        localctx = GenaParser.NseTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_nseType)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [GenaParser.Noid]:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.match(GenaParser.Noid)
                pass
            elif token in [GenaParser.Class]:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.match(GenaParser.Class)
                pass
            elif token in [GenaParser.Singleton]:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.match(GenaParser.Singleton)
                pass
            elif token in [GenaParser.Event]:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.match(GenaParser.Event)
                pass
            elif token in [GenaParser.DataType, GenaParser.Iden]:
                self.enterOuterAlt(localctx, 5)
                self.state = 87
                self.nseIden()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NseNaryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Nary(self):
            return self.getToken(GenaParser.Nary, 0)

        def getRuleIndex(self):
            return GenaParser.RULE_nseNary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNseNary" ):
                listener.enterNseNary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNseNary" ):
                listener.exitNseNary(self)




    def nseNary(self):

        localctx = GenaParser.NseNaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_nseNary)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(GenaParser.Nary)
            self.state = 91
            self.match(GenaParser.T__1)
            self.state = 92
            _la = self._input.LA(1)
            if not(_la==GenaParser.T__3 or _la==GenaParser.T__4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NseParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Param(self):
            return self.getToken(GenaParser.Param, 0)

        def getRuleIndex(self):
            return GenaParser.RULE_nseParam

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNseParam" ):
                listener.enterNseParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNseParam" ):
                listener.exitNseParam(self)




    def nseParam(self):

        localctx = GenaParser.NseParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_nseParam)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(GenaParser.Param)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NseCurlyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmtCopath(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GenaParser.StmtCopathContext)
            else:
                return self.getTypedRuleContext(GenaParser.StmtCopathContext,i)


        def stmtExtends(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GenaParser.StmtExtendsContext)
            else:
                return self.getTypedRuleContext(GenaParser.StmtExtendsContext,i)


        def stmtInitializes(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GenaParser.StmtInitializesContext)
            else:
                return self.getTypedRuleContext(GenaParser.StmtInitializesContext,i)


        def stmtCaller(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GenaParser.StmtCallerContext)
            else:
                return self.getTypedRuleContext(GenaParser.StmtCallerContext,i)


        def stmtCallinto(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GenaParser.StmtCallintoContext)
            else:
                return self.getTypedRuleContext(GenaParser.StmtCallintoContext,i)


        def stmtNse(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GenaParser.StmtNseContext)
            else:
                return self.getTypedRuleContext(GenaParser.StmtNseContext,i)


        def getRuleIndex(self):
            return GenaParser.RULE_nseCurly

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNseCurly" ):
                listener.enterNseCurly(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNseCurly" ):
                listener.exitNseCurly(self)




    def nseCurly(self):

        localctx = GenaParser.NseCurlyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_nseCurly)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(GenaParser.T__5)
            self.state = 105 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 105
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [GenaParser.Copath]:
                    self.state = 97
                    self.stmtCopath()
                    pass
                elif token in [GenaParser.Extends]:
                    self.state = 98
                    self.stmtExtends()
                    pass
                elif token in [GenaParser.T__8]:
                    self.state = 99
                    self.stmtInitializes()
                    pass
                elif token in [GenaParser.Caller]:
                    self.state = 100
                    self.stmtCaller()
                    pass
                elif token in [GenaParser.Callinto]:
                    self.state = 101
                    self.stmtCallinto()
                    pass
                elif token in [GenaParser.Noid, GenaParser.Let, GenaParser.DataType, GenaParser.Iden]:
                    self.state = 102
                    self.stmtNse()
                    self.state = 103
                    self.match(GenaParser.T__0)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 107 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << GenaParser.T__8) | (1 << GenaParser.Noid) | (1 << GenaParser.Let) | (1 << GenaParser.Copath) | (1 << GenaParser.Extends) | (1 << GenaParser.Callinto) | (1 << GenaParser.Caller) | (1 << GenaParser.DataType) | (1 << GenaParser.Iden))) != 0)):
                    break

            self.state = 109
            self.match(GenaParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtCopathContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Copath(self):
            return self.getToken(GenaParser.Copath, 0)

        def nseIden(self):
            return self.getTypedRuleContext(GenaParser.NseIdenContext,0)


        def getRuleIndex(self):
            return GenaParser.RULE_stmtCopath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtCopath" ):
                listener.enterStmtCopath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtCopath" ):
                listener.exitStmtCopath(self)




    def stmtCopath(self):

        localctx = GenaParser.StmtCopathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmtCopath)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(GenaParser.Copath)
            self.state = 112
            self.nseIden()
            self.state = 113
            self.match(GenaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtExtendsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Extends(self):
            return self.getToken(GenaParser.Extends, 0)

        def nseIden(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GenaParser.NseIdenContext)
            else:
                return self.getTypedRuleContext(GenaParser.NseIdenContext,i)


        def getRuleIndex(self):
            return GenaParser.RULE_stmtExtends

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtExtends" ):
                listener.enterStmtExtends(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtExtends" ):
                listener.exitStmtExtends(self)




    def stmtExtends(self):

        localctx = GenaParser.StmtExtendsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stmtExtends)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(GenaParser.Extends)
            self.state = 116
            self.nseIden()
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GenaParser.T__7:
                self.state = 117
                self.match(GenaParser.T__7)
                self.state = 118
                self.nseIden()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self.match(GenaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtInitializesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nseIden(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GenaParser.NseIdenContext)
            else:
                return self.getTypedRuleContext(GenaParser.NseIdenContext,i)


        def getRuleIndex(self):
            return GenaParser.RULE_stmtInitializes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtInitializes" ):
                listener.enterStmtInitializes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtInitializes" ):
                listener.exitStmtInitializes(self)




    def stmtInitializes(self):

        localctx = GenaParser.StmtInitializesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_stmtInitializes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(GenaParser.T__8)
            self.state = 127
            self.nseIden()
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GenaParser.T__7:
                self.state = 128
                self.match(GenaParser.T__7)
                self.state = 129
                self.nseIden()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(GenaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtCallerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Caller(self):
            return self.getToken(GenaParser.Caller, 0)

        def eventPath(self):
            return self.getTypedRuleContext(GenaParser.EventPathContext,0)


        def getRuleIndex(self):
            return GenaParser.RULE_stmtCaller

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtCaller" ):
                listener.enterStmtCaller(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtCaller" ):
                listener.exitStmtCaller(self)




    def stmtCaller(self):

        localctx = GenaParser.StmtCallerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_stmtCaller)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(GenaParser.Caller)
            self.state = 138
            self.eventPath()
            self.state = 139
            self.match(GenaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtCallintoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Callinto(self):
            return self.getToken(GenaParser.Callinto, 0)

        def eventPath(self):
            return self.getTypedRuleContext(GenaParser.EventPathContext,0)


        def getRuleIndex(self):
            return GenaParser.RULE_stmtCallinto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmtCallinto" ):
                listener.enterStmtCallinto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmtCallinto" ):
                listener.exitStmtCallinto(self)




    def stmtCallinto(self):

        localctx = GenaParser.StmtCallintoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_stmtCallinto)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(GenaParser.Callinto)
            self.state = 142
            self.eventPath()
            self.state = 143
            self.match(GenaParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventPathContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eventSpec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GenaParser.EventSpecContext)
            else:
                return self.getTypedRuleContext(GenaParser.EventSpecContext,i)


        def EvtPathConnector(self, i:int=None):
            if i is None:
                return self.getTokens(GenaParser.EvtPathConnector)
            else:
                return self.getToken(GenaParser.EvtPathConnector, i)

        def getRuleIndex(self):
            return GenaParser.RULE_eventPath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEventPath" ):
                listener.enterEventPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEventPath" ):
                listener.exitEventPath(self)




    def eventPath(self):

        localctx = GenaParser.EventPathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_eventPath)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.eventSpec()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GenaParser.EvtPathConnector:
                self.state = 146
                self.match(GenaParser.EvtPathConnector)
                self.state = 147
                self.eventSpec()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventSpecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eventName(self):
            return self.getTypedRuleContext(GenaParser.EventNameContext,0)


        def eventTargetArgs(self):
            return self.getTypedRuleContext(GenaParser.EventTargetArgsContext,0)


        def eventCurly(self):
            return self.getTypedRuleContext(GenaParser.EventCurlyContext,0)


        def getRuleIndex(self):
            return GenaParser.RULE_eventSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEventSpec" ):
                listener.enterEventSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEventSpec" ):
                listener.exitEventSpec(self)



